--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,19 @@
 services:
-  attender-cs219:
+  attender:
     build: .
-    image: attender-cs219:dev
-    container_name: attender-cs219
+    image: attender:dev
+    container_name: attender
     restart: unless-stopped
     environment:
       SPREADSHEET_ID:
-      # CREDENTIALS_FILE: # Optional
-      # WEBHOOK_ADDR:     # Optional
-      # AUTH_TOKEN:       # Optional
+      # CREDENTIALS_FILE: /path/to/credentials.json # Optional (defaults to ./credentials.json)
+      # COL_ROLL: A                                 # Optional (defaults to "A")
+      # COL_DATE_START: B                           # Optional (defaults to "B")
+      # COL_DATE_FORMAT: 2 Jan                      # Optional (defaults to "2 Jan")
+      # WEBHOOK_ADDR: 0.0.0.0:80                    # Optional (defaults to ":8080")
+      # AUTH_TOKEN: RandomSecretKey                 # Optional (defaults to <empty>)
       TZ: Asia/Kolkata
     ports:
       - 8080:8080
     volumes:
-      - ./credentials.json:/app/credentials.json
+      - ./credentials.json:/credentials.json
