refactor: internal packages, runners, consistent logging, new options, sanitization
- switched to modular internal packages
- switched webhook to runner
- added module-wise logging
- added row options
- fixed col options
- updated col types to uint32
- added config sanitization
- bumped dependencies version

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       # COL_ROLL: A                                 # Optional (defaults to "A")
       # COL_DATE_START: B                           # Optional (defaults to "B")
       # COL_DATE_FORMAT: 2 Jan                      # Optional (defaults to "2 Jan")
+      # ROW_HEADER: 1                               # Optional (defaults to 1)
+      # ROW_START: 2                                # Optional (defaults to 2)
       # WEBHOOK_ADDR: 0.0.0.0:80                    # Optional (defaults to ":8080")
       # AUTH_TOKEN: RandomSecretKey                 # Optional (defaults to <empty>)
       TZ: Asia/Kolkata
