--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,14 @@ services:
     restart: unless-stopped
     environment:
       SPREADSHEET_ID:
+      # SHEETS: Sheet1,Sheet2                       # Optional (defaults to all sheets)
       # CREDENTIALS_FILE: /path/to/credentials.json # Optional (defaults to ./credentials.json)
       # COL_ROLL: A                                 # Optional (defaults to "A")
-      # COL_DATE_START: B                           # Optional (defaults to "B")
-      # COL_DATE_FORMAT: 2 Jan                      # Optional (defaults to "2 Jan")
+      # COL_START: B                                # Optional (defaults to COL_ROLL + 1)
+      # COL_FORMAT: 2 Jan                           # Optional (defaults to "2 Jan")
+      # COL_COMMENT: C                              # Optional (defaults to "")
       # ROW_HEADER: 1                               # Optional (defaults to 1)
-      # ROW_START: 2                                # Optional (defaults to 2)
+      # ROW_START: 2                                # Optional (defaults to ROW_HEADER + 1)
       # ROW_FORMAT: 15:04:05                        # Optional (defaults to "P")
       # WEBHOOK_ADDR: 0.0.0.0:80                    # Optional (defaults to ":8080")
       # AUTH_TOKEN: RandomSecretKey                 # Optional (defaults to <empty>)
